# dcc-mcp-core

./: .gitignore  .release-please-manifest.json  AGENTS.md  AI_AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  dcc-mcp-catalog.yml  deny.toml  justfile  llms-full.txt  llms.txt  pyproject.toml  release-please-config.json
.githooks/: pre-push
.github/: clawhub-skills.json  file-size-exemptions.txt
.github/workflows/: build-wheels.yml  check-file-size.yml  ci.yml  clawhub.yml  deploy-docs.yml  docs-ci.yml  py37-ci-image.yml  python-matrix-full.yml  release-please-pr-guard.yml  release.yml  version-consistency.yml
admin-ui/: dev-mocks.ts  package-lock.json  package.json
admin-ui/src/: App.tsx  admin-types.ts  admin-ui-core.tsx  i18n.ts  logs.ts  main.tsx  setup.css  styles.css
admin-ui/tests/: admin.fixtures.ts  admin.spec.ts  marketplace.spec.ts  realtime.spec.ts  reliability.spec.ts  sessions.spec.ts
compatibility/: python.json
crates/dcc-mcp-capture/: Cargo.toml
crates/dcc-mcp-catalog/: Cargo.toml
crates/dcc-mcp-cli/: Cargo.toml
crates/dcc-mcp-computer-use/: Cargo.toml
crates/dcc-mcp-computer-use/src/: drag_path.rs  keyboard_policy.rs  lib.rs  lib_tests.rs  platform.rs  python.rs  ui_control_host.rs  visual_recognition.rs
crates/dcc-mcp-computer-use/src/platform/: windows.rs
crates/dcc-mcp-computer-use/src/platform/windows/: banner.rs  geometry.rs  input.rs  input_tests.rs  overlay.rs  overlay_render.rs  visual.rs
crates/dcc-mcp-computer-use/src/platform/windows/input/: game_navigation.rs  send_input.rs
crates/dcc-mcp-computer-use/src/ui_control_host/: audit.rs  connection.rs  policy.rs  recording_artifact.rs  recording_artifact_tests.rs  runtime_windows.rs  system_operations.rs  tests.rs  windows.rs
crates/dcc-mcp-computer-use/src/ui_control_host/runtime_windows/: confirmation.rs  tests.rs
crates/dcc-mcp-computer-use/src/ui_control_host/tests/: connection_tests.rs  navigation.rs
crates/dcc-mcp-db/: Cargo.toml
crates/dcc-mcp-gateway/: Cargo.toml  build.rs
crates/dcc-mcp-gateway-ensure/: Cargo.toml
crates/dcc-mcp-gateway-search/: Cargo.toml
crates/dcc-mcp-gateway-search/src/: engine.rs  lib.rs  query.rs  ranking.rs
crates/dcc-mcp-http-server/: Cargo.toml
crates/dcc-mcp-http-types/: README.md
crates/dcc-mcp-jsonrpc/: Cargo.toml
crates/dcc-mcp-jsonrpc/src/: discover.rs  jsonrpc.rs  lib.rs  lifecycle.rs
crates/dcc-mcp-marketplace/: Cargo.toml
crates/dcc-mcp-process/: Cargo.toml
crates/dcc-mcp-server/: Cargo.toml
crates/dcc-mcp-skill-rest/: Cargo.toml
crates/dcc-mcp-skills/: Cargo.toml
crates/dcc-mcp-ui-control/: Cargo.toml  README.md
crates/dcc-mcp-updater/: Cargo.toml
crates/workspace-hack/: Cargo.toml
docs/: overhead-baseline.md
docs/.vitepress/: config.mts
docs/adr/: 011-python-37-lts-compatibility-contract.md  012-os-assigned-dcc-instance-ports.md  013-persistent-tool-call-analytics.md  014-isolate-ui-control-host.md  015-bounded-ui-control-system-operations.md  016-unify-ui-control-naming.md  017-codex-record-replay-visual-closed-loop.md  README.md
docs/api/: cancellation.md  capture.md  dispatcher.md  factory.md  http.md  process.md  skills.md  utilities.md
docs/guide/: INDEX.md  adapter-compatibility-matrix.md  adapter-install-lifecycle.md  adapter-runtime-contracts.md  admin-ui.md  agents-reference.md  app-ui-workflows.md  architecture.md  asset-import-contract.md  cli-reference.md  dcc-thread-safety.md  faq.md  gateway.md  getting-started.md  host-adapter.md  marketplace.md  maya2022-support.md  metric-dictionary.md  new-adapter-onboarding.md  observability-schema.md  observability-troubleshooting.md  observability-usage.md  observability.md  process.md  production-deployment.md  protocols.md  py37-ci-image.md  py37-lite-architecture.md  rest-api-surface.md  skill-maintenance.md  skills.md  thin-harness.md  ui-control-workflows.md  what-is-dcc-mcp-core.md
marketplace-ui/: index.html  package-lock.json  package.json  vite.config.ts
marketplace-ui/src/: App.tsx  locales.test.ts  locales.ts  main.tsx  styles.css
pkg/dcc-mcp-core-semantic/: pyproject.toml
pkg/dcc-mcp-core-semantic/python/dcc_mcp_core_semantic/: __init__.py
pkg/dcc-mcp-server-bin/: pyproject.toml
python/dcc_mcp_core/: __init__.py  _core.pyi  _exports.py  _install_lifecycle_sidecar.py  _py37_fallback.py  _registration.py  _typing_compat.py  _windows_dll_search.py  adapter_contracts.py  admin_tools.py  agent_memory.py  asset_import.py  batch.py  bridge.py  cancellation.py  capabilities.py  chunked_runner.py  constants.py  daemon_launch.py  dcc_server.py  docs_resources.py  factory.py  gateway_election.py  hotreload.py  install_lifecycle.py  introspect.py  (+15 more)
scripts/: build_py37_lite_wheel.py  build_py37_pure_wheel.py  check_py37_syntax.py  clawhub_sync.py  cli-gateway-debug.ps1  install-cli.ps1  install-cli.sh  package_openclaw_skill.py
src/: lib.rs
tests/: bench_overhead.py  conftest.py  test_action_validator_deep.py  test_adapter_contracts.py  test_admin_skill_paths_reload.py  test_admin_tools.py  test_agent_memory.py  test_app_ui_skill.py  test_app_ui_window_recovery.py  test_artefact_fileref.py  test_asset_import_contract.py  test_auditlog_ratelimit_logging_mcp_versioned_deep.py  test_bridge_resilience.py  test_build_wheels_workflow.py  test_builtin_skills.py  test_bundled_skill_metadata.py  test_cancellation.py  test_capture.py  test_capture_helper_packaging.py  test_capture_hwnd_backend.py  test_capture_window_api.py  test_chunked_runner.py  test_clawhub_sync.py  test_cli_install_scripts.py  test_context_bundle_rez_fixture.py  test_create_skill_manager.py  test_dcc_adapter_base.py  test_dcc_mcp_skill.py  test_dcc_mcp_skills_creator_scaffold.py  test_dcc_mcp_skills_creator_validation.py  test_dcc_qt_dispatcher_py.py  test_dcc_server_options.py  test_diagnostics_mcp_tools.py  test_docs_workflows.py  test_e2e_gateway_prompts_sse.py  test_e2e_gateway_skill_load_sse.py  test_e2e_live_upstream_skills.py  test_e2e_maya_full_flow.py  test_e2e_multi_dcc_skill_search.py  test_e2e_multi_service.py  (+71 more)
(+593 files in other folders)
