[package]
name = "dcc-mcp-gateway-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure reusable DCC-MCP search: query types, fuzzy ranking, and pagination with no gateway runtime dependencies"
keywords = ["mcp", "gateway", "search", "fuzzy"]
categories = ["text-processing"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
nucleo-matcher = "0.3"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
serde_json = { workspace = true }
